--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-remark-smartypants": "2.3.0",
     "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "2.3.0",
+    "gatsby-source-ghost": "^4.0.5",
     "gatsby-transformer-remark": "2.8.0",
     "gatsby-transformer-sharp": "2.5.0",
     "lodash": "^4.17.15",
