--- a/stackbit.yml
+++ b/stackbit.yml
@@ -1,7 +1,7 @@
 stackbitVersion: ~0.2.0
 ssgName: custom    # allowed values: unibit, jekyll, hugo, gatsby, custom
 buildCommand: npm run build  # build command that builds static site
-publishDir: dist   # folder with the generated static site files
+publishDir: public   # folder with the generated static site files
 staticDir: static  # folder with files that are copied to publishDir as is
 uploadDir: images  # folder with media files, relative to staticDir
 pagesDir: content  # folder with markdown page files
